2003-12-12  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclCmdAH.c: fix to normalization of non-existent user
	name ('file normalize ~nobody') [Bug 858937]

2003-12-09  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tclUnixPort.h:	#ifdef'd out declarations of errno which
	* tools/man2tcl.c:	are known to cause problems with recent
				glibc. [Bug 852369]

2003-12-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tcl.h:	Bumped patch level to 8.4.5.1 to distinguish
	* unix/configure.in:	CVS snapshots from 8.4.5 release.
	* unix/tcl.spec:
	* win/configure.in:

	* unix/configure:	autoconf (2.13)
	* win/configure:

2003-12-02  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclBinary.c (DeleteScanNumberCache, ScanNumber): Made
	the numeric scan-value cache have proper references to the objects
	within it so strange patterns of writes won't cause references to
	freed objects. [Bug 851747]

2003-12-01  Miguel Sofer <msofer@users.sf.net>

	* doc/lset.n: fix typo [Bug 852224]

2003-11-21  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.5 TAGGED FOR RELEASE ***

	* tests/windFCmd.test (winFCmd-16.10):  Corrected failure to
	initialize variable $dd that caused test suite failure.

2003-11-20  Miguel Sofer <msofer@users.sf.net>

	* generic/tclVar.c: fix flag bit collision between
	LOOKUP_FOR_UPVAR and TCL_PARSE_PART1 (deprecated) [Bug 835020] 
	
2003-11-20  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclIOUtil.c:
	* tests/winFCmd.test: fix to [Bug 845778] - Infinite recursion 
	on [cd] (Windows only bug).
	
2003-11-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* changes: updated for 8.4.5 release

2003-11-17  Don Porter  <dgp@users.sourceforge.net>

	* generic/regcomp.c:	Backported regexp bug fixes and tests.  Thanks
	* generic/tclTest.c:	to Pavel Goran and Vince Darley.
	* tests/reg.test:	[Bugs 230589, 504785, 505048, 703709, 840258]

2003-11-12  Jeff Hobbs  <jeffh@ActiveState.com>
